kubernetes/environments/dev/apps/openproject/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openproject
  labels:
    app.kubernetes.io/name: openproject
    app.kubernetes.io/part-of: pilot-apps
    app.kubernetes.io/managed-by: argocd
